2012-07-12: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GormLib/IBObjectAdditions.m
	* revert change from 2012-04-20, to fix Connection Inspector
	  on at least a couple of *BSD

2012-06-19 00:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* ANNOUNCE
	* Documentation/news.texi
	* GormCore/GormDocument.m
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormObjectEditor.m
	* GormCore/GormViewEditor.m
	* GormCore/GormViewWindow.m
	* GormInfo.plist
	* NEWS
	* Version: 1.2.18

2012-05-01 23:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormStandaloneViewEditor.m
	* GormCore/GormViewWithContentViewEditor.m
	* GormCore/GormWindowTemplate.m
	* Palettes/0Menus/GormMenuEditor.m
	* Palettes/0Menus/MenusPalette.m: Eliminate as many of the remaining
	warnings in the code as possible.

2012-04-20 18:53-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormResourceEditor.m: Correct compiler warnings.

2012-04-20 12:16-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormNSPopUpButton.h
	* Palettes/2Controls/GormNSPopUpButton.m: Added new files for
	Gorm subclass of NSPopUpButton.

2012-04-20 12:03-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormCustomView.m
	* GormCore/GormFilesOwner.m
	* GormCore/GormFunctions.m
	* GormObjCHeaderParser/OCHeaderParser.m
	* Palettes/2Controls/ControlsPalette.m
	* Palettes/2Controls/GNUmakefile
	* Palettes/2Controls/GormPopUpButtonEditor.m
	* Palettes/3Containers/GormNSBrowser.m
	* Palettes/4Data/GormImageViewAttributesInspector.m: Correct
	compiler warnings found by clang.

2012-04-20 10:34-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormLib/IBObjectAdditions.m
	* GormObjCHeaderParser/OCClass.m
	* GormObjCHeaderParser/OCHeaderParser.m
	* GormObjCHeaderParser/OCIVarDecl.m
	* GormObjCHeaderParser/OCIVar.m
	* GormObjCHeaderParser/OCMethod.m